# recallbench

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  recallbench.toml
.dial/: current_context.md  foundation.db  foundation.db-shm  foundation.db-wal
.docs/: recallbench_spec.db
.github/workflows/: ci.yml
adapters/recallbench-femind/: Cargo.toml
adapters/recallbench-femind/src/: lib.rs
adapters/recallbench-mem0/: Cargo.toml
adapters/recallbench-mem0/src/: lib.rs
adapters/recallbench-mindcore/: Cargo.toml
adapters/recallbench-mindcore/src/: lib.rs
adapters/recallbench-omega/: Cargo.toml
adapters/recallbench-omega/src/: lib.rs
adapters/recallbench-zep/: Cargo.toml
adapters/recallbench-zep/src/: lib.rs
calibration/: longmemeval_50.json
historical/: BENCHMARK_PROGRESS.md  HISTORY.md  STATUS-2026-03-23.md  STATUS-2026-03-24.md  STATUS-2026-03-25.md  femind-longmemeval-v1.jsonl  femind-longmemeval-v1.meta.json  femind-longmemeval-v2.jsonl  femind-longmemeval-v2.meta.json  femind-longmemeval-v3.jsonl  femind-longmemeval-v3.meta.json  femind-longmemeval-v4.jsonl  femind-longmemeval-v4.meta.json  femind-longmemeval-v5.jsonl  femind-longmemeval-v5.meta.json  mindcore-longmemeval-v1-via-mindcore-bench.jsonl  mindcore-longmemeval-v1-via-mindcore-bench.meta.json  mindcore-longmemeval-v1.meta.json  mindcore-longmemeval-v2-via-mindcore-bench.jsonl  mindcore-longmemeval-v2-via-mindcore-bench.meta.json  mindcore-longmemeval-v2.meta.json  mindcore-longmemeval-v3-draft-via-mindcore-bench.jsonl  mindcore-longmemeval-v3-draft-via-mindcore-bench.meta.json  mindcore-longmemeval-v3-via-mindcore-bench.meta.json  mindcore-longmemeval-v3.meta.json  mindcore-longmemeval-v4-via-mindcore-bench.meta.json  mindcore-longmemeval-v4.jsonl  mindcore-longmemeval-v4.meta.json  mindcore-longmemeval-v5.jsonl  mindcore-longmemeval-v5.meta.json  retrieval-analysis-2026-03-23.md
recallbench/: Cargo.toml
recallbench/src/: checkpoint.rs  config.rs  embedding_cache.rs  errors.rs  extraction_test.rs  lib.rs  longevity.rs  main.rs  pipeline_test.rs  resume.rs  retrieval_test.rs  runner.rs  sampling.rs  session_cache.rs  traits.rs  types.rs  verify.rs
recallbench/src/datasets/: convomem.rs  custom.rs  download.rs  halumem.rs  locomo.rs  longmemeval.rs  mab.rs  membench.rs  mod.rs
recallbench/src/judge/: calibration.rs  dual.rs  mod.rs  prompts.rs
recallbench/src/llm/: anthropic.rs  cli.rs  codex.rs  compatible.rs  gemini.rs  mod.rs  openai.rs  rate_limit.rs
recallbench/src/metrics/: accuracy.rs  cost.rs  latency.rs  mod.rs
recallbench/src/report/: csv.rs  failure.rs  json.rs  markdown.rs  mod.rs  table.rs
recallbench/src/systems/: echo.rs  femind_adapter.rs  http.rs  memloft_adapter.rs  mindcore_adapter.rs  mod.rs  subprocess.rs
recallbench/src/web/: mod.rs  routes.rs
recallbench/src/web/static/: app.js  index.html  style.css
recallbench/src/web/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
recallbench/src/web/ui/src/: App.tsx  app.js  styles.css
specs/: FUTURE_PHASES.md  GAP_FIX.md  LONGMEMEVAL_MODEL_LANDSCAPE.md  PRD.md  RETRIEVAL_TEST_HARNESS.md
src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
