[workspace]
members = [
    "recallbench",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/victorysightsound/recallbench"
authors = ["John Deaton <john@victorysightsound.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
anyhow = "1"
async-trait = "0.1"
comfy-table = "7"
toml = "0.8"
csv = "1"
governor = "0.8"
hdrhistogram = "7"
axum = "0.8"
rust-embed = "8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
dirs = "6"
futures-util = "0.3"
