[package]
name = "recallbench"
description = "A universal benchmark harness for AI memory systems"
keywords = ["benchmark", "memory", "ai", "evaluation", "recall"]
categories = ["development-tools::testing"]
readme = "../README.md"
homepage = "https://github.com/victorysightsound/recallbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
comfy-table = { workspace = true }
toml = { workspace = true }
csv = { workspace = true }
governor = { workspace = true }
hdrhistogram = { workspace = true }
axum = { workspace = true }
rust-embed = { workspace = true }
tower-http = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
which = { workspace = true }
open = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
mindcore = { path = "../../mindcore", optional = true, features = ["vector-search", "api-embeddings"] }
memloft-core = { path = "../../memloft/memloft-core", optional = true }

[features]
default = ["mindcore-adapter"]
mindcore-adapter = ["dep:mindcore"]
memloft-adapter = ["dep:memloft-core", "dep:mindcore"]

[dev-dependencies]
tempfile = { workspace = true }
