[package]
name = "recallbench-femind"
version = "0.1.0"
edition = "2024"
description = "Femind adapter for RecallBench"
license = "MIT OR Apache-2.0"

[dependencies]
recallbench = { path = "../../recallbench" }
femind = { path = "../../../fe-suite/fe-mind" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
