[package]
name = "recallbench-mem0"
version = "0.1.0"
edition = "2024"
description = "mem0 adapter for RecallBench"
license = "MIT OR Apache-2.0"

[dependencies]
recallbench = { path = "../../recallbench" }
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
