[package]
name = "recallbench-mindcore"
version = "0.1.0"
edition = "2024"
description = "MindCore adapter for RecallBench"
license = "MIT OR Apache-2.0"

[dependencies]
recallbench = { path = "../../recallbench" }
mindcore = { path = "../../../mindcore" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
